<resources>
    <string name="app_name">Mes recettes Nesti</string>
    <string name="choisissez_votre_categorie">Choisir une catégorie</string>
    <string name="main_btn_easy">Facile à faire</string>
    <string name="main_btn_traditional">Traditionnelles</string>
    <string name="main_btn_season">C\'est de saison</string>
    <string name="main_btn_gluten">Sans gluten</string>
    <string name="txt_menu_search">Rechercher une recette</string>
    <string name="txt_list">Liste des courses</string>
    <string name="txt_pres">Présentation</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_team">Team</string>
    <string name="menu_project">Projet</string>
    <string name="txt_title_easy">Liste des recettes faciles</string>
    <string name="txt_title_trad">Liste des recettes traditionelles</string>
    <string name="txt_title_season">Liste des recettes de saison</string>
    <string name="txt_title_gluten">Liste des recettes sans gluten</string>
    <string name="return_btn">Retour</string>
    <string name="txt_line_recipe_title">Titre</string>
    <string name="txt_line_recipe_author">Auteur</string>
    <string name="star">star</string>
    <string name="image_de_recette">Image de recette</string>
    <string name="title_activity_tab_recipe">TabRecipeActivity</string>
    <string name="tab_text_1">Préparation</string>
    <string name="tab_text_2">Ingrédients</string>
    <string name="tabRecipe_txtViewTitle">Titre Tab</string>
    <string name="txt_to_fill">Fragments</string>
    <string name="txt_placeholder_recipe_name">Nom recette</string>
    <string name="btn_ok">OK</string>
    <string name="txt_title_search">Rechercher</string>
    <string name="txt_subtitle_search">Quelle recette cherchez-vous?</string>
    <string name="txt_title_result">Résultats de recherche</string>
    <string name="button_add">BtnAdd</string>
    <string name="txt_to_fill_result">Recette</string>
    <string name="txt_to_steps">Préparation</string>
    <string name="txt_to_ings">Ingrédients</string>
    <string name="ings_title">Liste des ingrédients</string>
    <string name="steps_title">Liste des préparations</string>
    <string name="textview_ingredient">TextView</string>
    <string name="textview_quantity">TextView</string>
    <string name="textview_unit">TextView</string>
    <string name="cart">Panier</string>
    <string name="see_result">Voir</string>
    <string name="result_txt">Résultat</string>
    <string name="txt_title_cart">Liste de courses</string>
    <string name="btn_cart">Vider la liste</string>
</resources>