<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/search_txtView_title"
        android:layout_width="205dp"
        android:layout_height="43dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="688dp"
        android:text="@string/txt_title_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_txtView_subtitle"
        android:layout_width="409dp"
        android:layout_height="33dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="655dp"
        android:text="@string/txt_subtitle_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_editTxt_recipe"
        android:layout_width="238dp"
        android:layout_height="60dp"
        android:layout_marginStart="58dp"
        android:layout_marginBottom="372dp"
        android:ems="10"
        android:hint="@string/txt_placeholder_recipe_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/search_btn_ok"
        android:layout_width="89dp"
        android:layout_height="54dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="369dp"
        android:text="@string/btn_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/search_editTxt_recipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>