<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/line_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxHeight="150dp">

    <ImageView
        android:id="@+id/line_recipe_imageView"
        android:layout_width="136dp"
        android:layout_height="131dp"
        android:layout_marginEnd="331dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/image_de_recette"
        android:maxHeight="150dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/line_recipe_title"
        android:layout_width="300dp"
        android:layout_height="29dp"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="259dp"
        android:layout_marginBottom="90dp"
        android:text="@string/txt_line_recipe_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/line_recipe_author"
        android:layout_width="299dp"
        android:layout_height="29dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="266dp"
        android:layout_marginBottom="64dp"
        android:text="@string/txt_line_recipe_author"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/line_recipe_starImg"
        android:layout_width="129dp"
        android:layout_height="30dp"
        android:layout_marginStart="183dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/star_1" />
</androidx.constraintlayout.widget.ConstraintLayout>